Fix content shifting caused by scrollbar

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,6 +9,7 @@ html {
     -webkit-tap-highlight-color: transparent;
     // Disable the long press pop up on ios
     -webkit-touch-callout: none;
+    scrollbar-gutter: stable;
 
 //     @include m.mobile {
 //         font-size: 14px;
